--- a/css/style.css
+++ b/css/style.css
@@ -161,3 +161,10 @@ td {
 .links:active {
     color: #74e196;
 }
+
+.inputs {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 500px;
+}
