--- a/css/style.css
+++ b/css/style.css
@@ -162,9 +162,97 @@ td {
     color: #74e196;
 }
 
+.data,
+.headline {
+    text-align: center;
+    font-size: 24px;
+    font-family: 'FuturaPTBold';
+}
+
 .inputs {
     display: flex;
+    align-items: center;
     flex-direction: column;
-    justify-content: center;
+}
+.data {
+    text-align-last: left;
+}
+
+input {
+    border: 2px solid #000;
     width: 500px;
+    height: 35px;
+}
+
+.txt {
+    border: 2px solid #000;
+}
+
+.send {
+    margin-top: 50px;
+    text-align: center;
+}
+
+footer {
+    background: url(../img/bg-footer.png) no-repeat;
+    background-size: 100%;
+    height: 300px;
+}
+
+.footer-main {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 50px;
+}
+
+.icon {
+    padding-left: 30px;
+}
+
+.footer-logo {
+    font-size: 24px;
+    text-transform: uppercase;
+    font-weight: bold;
+    border: 3px solid #000;
+    padding: 10px;
+}
+
+.footer-icons {
+    font-size: 30px;
+    padding-left: 20px;
+}
+
+.footer-contacts {
+    display: flex;
+    flex-direction: column;
+    font-weight: bold;
+}
+
+.namber,
+.contacts-link {
+    text-decoration: none;
+    color: #000;
+    font-size: 24px;
+}
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 40px;
+}
+
+.footer-menu {
+    font-weight: bold;
+    font-size: 16px;
+}
+
+.footer-items {
+    display: inline-block;
+    padding-left: 20px;
+    text-transform: uppercase;
+}
+
+.footer-link {
+    text-decoration: none;
+    color: #000;
 }
